--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "fideloper/proxy": "^4.0",
+        "illuminate/html": "5.*",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.2.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
